2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build inst] Add support for "no C module" mode.

	* Makefile.am (d_LTLIBRARIES): Conditionalize with ‘USE_CMOD’.
	[!USE_CMOD] (pkglib_LTLIBRARIES, d_DATA): New vars.
	[!USE_CMOD] (postgres.exports, postgres): New targets.
	(install-data-hook): Conditionalize sofix invocation with ‘USE_CMOD’.
	(install-data-hook) [USE_CMOD]: Don't use $(mkmodcat);
	instead, invoke "$(GUILE_TOOLS) make-module-catalog" directly.
	(install-data-hook) [!USE_CMOD]: Add commands to generate
	and install an in-tree Scheme wrapper, if ‘FOR_MAKE_CHECK’ set.
	(DISTCLEANFILES): Add postgres.exports.
	(CLEANFILES): Add postgres.
	* libpq.c (scm_init_database_postgres_module):
	Conditionalize this GH_MODULE_LINK_FUNC with ‘ifdef USE_CMOD’.
	[!USE_CMOD] (guile_pg_init_database_postgres_module): New func.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Rename some libpq.c functions for uniformity.

	U(X) ≡ "Rename from X".
	* libpq.c (pg_lo_creat): U (lob_lo_creat).
	(pg_lo_open): U (lob_lo_open).
	(pg_lo_unlink): U (lob_lo_unlink).
	(pg_lo_get_oid): U (lob_lo_get_oid).
	(pg_lo_tell): U (lob_lo_tell).
	(pg_lo_seek): U (lob_lo_seek).
	(pg_lo_read): U (lob_lo_read).
	(pg_lo_import): U (lob_lo_import).
	(pg_lo_export): U (lob_lo_export).

2011-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[inst int] Move $(mkmodcat) invocation from top dir to src/.

	* Makefile.am (install-data-hook): Add command
	to make the module-catalog in $(GUILE_LIBSITE).

2011-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[inst] Decruft: Don't do "upgrade from previous install" actions.

	These are properly the duty of "make uninstall"
	for the previous release.

	* Makefile.am (retired): Delete var.
	(install-data-hook): Don't delete $(ddir)/postgres-sup.*;
	don't delete $(retired) and contents.

2011-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use Guile-BAUX for init snarfing.

	* Makefile.am (SUFFIXES): Delete var.