@@ -34,14 +34,6 @@
 
 #include "gi.h"                         /* Guile interface */
 
-#if __STDC_VERSION__ < 199901L
-# if __GNUC__ >= 2
-#  define __func__ __FUNCTION__
-# else
-#  define __func__ "<unknown>"
-# endif
-#endif
-
 #ifdef __GNUC__
 #define UNUSED __attribute__ ((unused))
 #else
